--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="uz">
 
 <head>
   <meta charset="utf-8">
   <title>Shahrisabz shahri 6-sonli maktab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="shortcut icon" href="images/logo/logo1.png">
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="plugins/slick/slick.css">
   <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
