--- a/about.html
+++ b/about.html
@@ -215,6 +215,12 @@
             document.getElementById("btn").style.marginLeft = "-100vw";
        }
    </script>
+  <script>
+window.replainSettings = { id: '2bcd6a28-fbfc-4310-baf2-539a95029569' };
+(function(u){var s=document.createElement('script');s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js');
+</script>
 <script src="plugins/jQuery/jquery.min.js"></script>
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <script src="plugins/slick/slick.min.js"></script>
